--- a/WEB-PROJECT-MS/SRC/alertes-service/views/alertes.ejs
+++ b/WEB-PROJECT-MS/SRC/alertes-service/views/alertes.ejs
@@ -14,9 +14,9 @@
             <ul>
                 <li><a href="http://localhost:9080/">Accueil</a></li>
                 <li><a href="http://localhost:9083/espace-perso">Espace Personnel</a></li>
-                <li><a href="http://localhost:9080/">Objectifs Financiers</a></li>
+                <li><a href="http://localhost:9087/objectifs-financiers">Objectifs Financiers</a></li>
                 <li><a href="http://localhost:9084/alertes">Alertes</a></li>
-                <li><a href="http://localhost:9080/">Transactions</a></li>
+                <li><a href="http://localhost:9086/transactions">Transactions</a></li>
                 <li><a href="http://localhost:9085/logout">Déconnexion</a></li>
             </ul>
         </nav>
